# lumonitor

./: README.md  config.json  hotkeys.py  install.sh  lumonitor-autostart.desktop  lumonitor.desktop  lumonitor.py  pyproject.toml  requirements.txt  setup.cfg  simple_hotkeys.py  test_lumonitor.py
