[metadata]
name = lumonitor
version = 0.1.0
description = Lightweight brightness control utility for Linux
long_description = file: README.md
long_description_content_type = text/markdown
author = suleymankndlc
license = MIT

[options]
packages = find:
install_requires =
    PyGObject>=3.42.0
    pycairo>=1.20.0
    psutil>=5.9.0
    plyer>=2.1.0
    pynput>=1.7.6
python_requires = >=3.8

[options.entry_points]
console_scripts =
    lumonitor = lumonitor:main
